[tool.poetry]
name = "ivelum-test-task"
version = "0.1.0"
description = ""
authors = ["gsokolovskii <gsokolovskii@iponweb.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
